<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="primeiroapp.studio.com.meuprimeiroapp.CadUsuarioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuario_txtNome"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/usuario_edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuario_txtLogin"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/usuario_edtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuario_txtSenha"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>


        <EditText
            android:id="@+id/usuario_edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>


    </LinearLayout>

</ScrollView>
